--- a/scss/_extends.scss
+++ b/scss/_extends.scss
@@ -1,12 +1,12 @@
 .intro{
     background-color:rgb(80, 103, 162);
             line-height: 30px;
-            font-size: 1rem;
+            font-size: 1.5rem;
             border: 2px black solid;
             width: $ancho - 20%;
             padding: 2rem;
             text-align: justify;
-            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Satisfy', cursive;
             overflow: auto; 
             opacity: 75%;
             margin: 2rem auto;
