--- a/scss/_menu2.scss
+++ b/scss/_menu2.scss
@@ -4,7 +4,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     li a{
-        color: #26b9c4fd;
+        color: #7fffd4;
         font-weight: bold;
         font-size: larger;
         &:hover{
