--- a/scss/_extends.scss
+++ b/scss/_extends.scss
@@ -1,12 +1,12 @@
 .intro{
     background-color:rgb(80, 103, 162);
             line-height: 30px;
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             border: 2px black solid;
-            width: $ancho - 20%;
+            width: $ancho - 10%;
             padding: 2rem;
             text-align: justify;
-            font-family: 'Satisfy', cursive;
+            font-family: 'Josefin Sans', sans-serif;
             overflow: auto; 
             opacity: 75%;
             margin: 2rem auto;
