--- a/scss/_menuinicial.scss
+++ b/scss/_menuinicial.scss
@@ -11,7 +11,7 @@
                     font-size: 1.7rem;
                         a{
                             display: inline-block;
-                            color: aquamarine;
+                            color: #7fffd4;
                             font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
                             font-style: bold;
                             &:hover{
