--- a/css/estilo.css
+++ b/css/estilo.css
@@ -62,7 +62,7 @@ body .headerInicio ul li a {
 }
 
 body .headerInicio ul li a:hover {
-  color: #9b61d2;
+  color: #e090ef;
 }
 
 body .mainInicio {
@@ -75,7 +75,7 @@ body .mainInicio .packs {
 }
 
 body .mainInicio .packs .packs__1 {
-  margin: 20px auto;
+  margin: 10px auto;
   padding: 2rem;
 }
 
@@ -121,6 +121,7 @@ body .footerInicio .menu2 li a {
 body .footerInicio .menu2 li a:hover {
   background-color: #0d100f;
   border-radius: 20%;
+  color: #e090ef;
 }
 
 .ContenedorAbout {
@@ -157,7 +158,7 @@ body .footerInicio .menu2 li a:hover {
 }
 
 .ContenedorAbout .HAbout ul li a:hover {
-  color: #9b61d2;
+  color: #e090ef;
 }
 
 .ContenedorAbout .main {
@@ -240,88 +241,7 @@ body .footerInicio .menu2 li a:hover {
 .ContenedorAbout .Fabout .p-1 .menu2 li a:hover {
   background-color: #0d100f;
   border-radius: 20%;
-}
-
-.shopsContainer {
-  width: 90%;
-  margin: 20px auto;
-}
-
-.shopsContainer .headerShop {
-  padding: 2rem;
-}
-
-.shopsContainer .headerShop ul {
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  padding: 2rem;
-  height: auto;
-  text-align: center;
-}
-
-.shopsContainer .headerShop ul li {
-  font-size: 1.7rem;
-}
-
-.shopsContainer .headerShop ul li a {
-  display: inline-block;
-  color: #7fffd4;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  font-style: bold;
-}
-
-.shopsContainer .headerShop ul li a:hover {
-  color: #9b61d2;
-}
-
-.shopsContainer .sucursales {
-  width: 70%;
-  padding: 2rem;
-  margin: 10px auto;
-}
-
-.shopsContainer .sucursales .sucursales__ubi__maps {
-  margin-left: 12vw;
-}
-
-.shopsContainer .sucursales .sucursales__ubi__maps:hover {
-  -webkit-transform: scale(1.1, 1.1);
-          transform: scale(1.1, 1.1);
-}
-
-.shopsContainer .footerShop {
-  width: 90%;
-  margin: 20px auto;
-}
-
-.shopsContainer .footerShop .p-1 .menu2 {
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-}
-
-.shopsContainer .footerShop .p-1 .menu2 li a {
-  color: #7fffd4;
-  font-weight: bold;
-  font-size: larger;
-}
-
-.shopsContainer .footerShop .p-1 .menu2 li a:hover {
-  background-color: #0d100f;
-  border-radius: 20%;
+  color: #e090ef;
 }
 
 .prodContainer {
@@ -358,25 +278,24 @@ body .footerInicio .menu2 li a:hover {
 }
 
 .prodContainer .headerProd ul li a:hover {
-  color: #9b61d2;
+  color: #e090ef;
 }
 
-.prodContainer .productos__lista {
-  width: 80%;
-  height: 80%;
-  margin: 20px auto;
-  list-style: none;
-}
-
-.prodContainer .productos__lista ul li {
+.prodContainer .productos {
+  width: 90%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  display: inline-block;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 4rem;
+  margin: 7rem auto;
+}
+
+.prodContainer .productos .card {
+  color: navy;
+  text-align: center;
+  text-decoration: underline;
 }
 
 .prodContainer .footerProd {
@@ -407,11 +326,96 @@ body .footerInicio .menu2 li a:hover {
 .prodContainer .footerProd .p-1 .menu2 li a:hover {
   background-color: #0d100f;
   border-radius: 20%;
+  color: #e090ef;
+}
+
+.shopsContainer {
+  width: 90%;
+  margin: 20px auto;
+}
+
+.shopsContainer .headerShop {
+  padding: 2rem;
+}
+
+.shopsContainer .headerShop ul {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  padding: 2rem;
+  height: auto;
+  text-align: center;
+}
+
+.shopsContainer .headerShop ul li {
+  font-size: 1.7rem;
+}
+
+.shopsContainer .headerShop ul li a {
+  display: inline-block;
+  color: #7fffd4;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-style: bold;
+}
+
+.shopsContainer .headerShop ul li a:hover {
+  color: #e090ef;
+}
+
+.shopsContainer .sucursales {
+  width: 80%;
+  padding: 3rem;
+  margin: 10px auto;
+}
+
+.shopsContainer .sucursales .sucursales__ubi__maps {
+  margin-left: 18vw;
+  padding: 1rem;
+}
+
+.shopsContainer .sucursales .sucursales__ubi__maps:hover {
+  -webkit-transform: scale(1.1, 1.1);
+          transform: scale(1.1, 1.1);
+}
+
+.shopsContainer .footerShop {
+  width: 90%;
+  margin: 20px auto;
+}
+
+.shopsContainer .footerShop .p-1 .menu2 {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.shopsContainer .footerShop .p-1 .menu2 li a {
+  color: #7fffd4;
+  font-weight: bold;
+  font-size: larger;
+}
+
+.shopsContainer .footerShop .p-1 .menu2 li a:hover {
+  background-color: #0d100f;
+  border-radius: 20%;
+  color: #e090ef;
 }
 
 .contenedorcontacto {
   width: 90%;
-  margin: 4rem auto;
+  margin: 2rem auto;
 }
 
 .contenedorcontacto .Hcontact {
@@ -445,31 +449,18 @@ body .footerInicio .menu2 li a:hover {
 }
 
 .contenedorcontacto .Hcontact ul li a:hover {
-  color: #9b61d2;
+  color: #e090ef;
 }
 
 .contenedorcontacto .Forcoment {
   width: 90%;
+  padding: 5rem;
   grid-area: Forcoment;
 }
 
 .contenedorcontacto .footcontact {
   width: 90%;
   grid-area: footcontact;
-}
-
-.contenedorcontacto .footcontact .sucursales {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  margin: 4rem auto;
-}
-
-.contenedorcontacto .footcontact .sucursales .sucursales__ubi__map:hover {
-  -webkit-transform: scale(1.2, 1.2);
-          transform: scale(1.2, 1.2);
 }
 
 .contenedorcontacto .footcontact .p-1 .menu2 {
@@ -495,6 +486,7 @@ body .footerInicio .menu2 li a:hover {
 .contenedorcontacto .footcontact .p-1 .menu2 li a:hover {
   background-color: #0d100f;
   border-radius: 20%;
+  color: #e090ef;
 }
 
 @media screen and (max-width: 480px) {
