--- a/scss/_menu2.scss
+++ b/scss/_menu2.scss
@@ -10,6 +10,7 @@
         &:hover{
             background-color: rgb(13, 16, 15);
             border-radius: 20%;
+            color: rgb(224, 144, 239);
         }
     }
 }
