--- a/scss/_menu2.scss
+++ b/scss/_menu2.scss
@@ -3,13 +3,14 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    background-color: rgb(7, 53, 61);
+    opacity: 80%;
     li a{
         color: #7fffd4;
         font-weight: bold;
         font-size: larger;
+        
         &:hover{
-            background-color: rgb(13, 16, 15);
-            border-radius: 20%;
             color: rgb(224, 144, 239);
         }
     }
