--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -38,11 +38,12 @@ body{
     
     .footerInicio{
         width: $ancho;
+        margin: 20px auto;
         grid-area: footerInicio;
         .sucursales{
             display: flex;
             justify-content: space-around;
-            margin: 4rem auto;
+            margin: 3rem auto;
             .sucursales__ubi__map:hover {
                 transform: scale(1.2, 1.2);
             }
@@ -152,7 +153,7 @@ body{
 }
 .contenedorcontacto{
     width: $ancho;
-    margin: 2rem auto;
+    margin: 20px auto;
     .Hcontact{
             width: $ancho;
             grid-area: Hcontact;
@@ -161,7 +162,11 @@ body{
     .Forcoment{
         width: $ancho;
         padding: 5rem;
+        background-color: rgb(7, 53, 61);
         grid-area: Forcoment;
+        .btn{
+            margin-left: 4rem;
+        }
     }
     .footcontact{
         width: $ancho;
