--- a/css/estilo.css
+++ b/css/estilo.css
@@ -85,6 +85,7 @@ body .mainInicio .packs {
 body .mainInicio .packs .packs__1 {
   margin: 10px auto;
   padding: 2rem;
+  width: 18rem;
 }
 
 body .footerInicio {
