--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -31,6 +31,7 @@ body{
                 .packs__1{
                     margin: 10px auto;
                     padding: 2rem;
+                    width: 18rem;
                 }
                 
             }
