--- a/scss/_extends.scss
+++ b/scss/_extends.scss
@@ -6,9 +6,9 @@
             width: $ancho - 10%;
             padding: 2rem;
             text-align: justify;
-            font-family: 'Josefin Sans', sans-serif;
+            font-family: 'Montserrat', sans-serif;
             overflow: auto; 
-            opacity: 75%;
+            opacity: 80%;
             margin: 2rem auto;
             margin-bottom: 10rem;
 }
