--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,9 +6,9 @@
   width: 80%;
   padding: 2rem;
   text-align: justify;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   overflow: auto;
-  opacity: 75%;
+  opacity: 80%;
   margin: 2rem auto;
   margin-bottom: 10rem;
 }
@@ -547,9 +547,6 @@ body .footerInicio .menu2 li a:hover {
         grid-template-rows: auto 1fr auto;
         grid-template-areas: "Hcontact" "Forcoment" "footcontact";
   }
-}
-
-@media screen and (max-width: 480px) {
   .ContenedorAbout {
     width: 90%;
     display: -ms-grid;
