--- a/scss/_menuinicial.scss
+++ b/scss/_menuinicial.scss
@@ -1,30 +1,10 @@
 @mixin menuinicial {
-          padding: 2rem;
-                ul{
-                    .logo{
-                        z-index: 1;
-                      }
-                    z-index: -1;
-                    list-style: none;
-                    display: flex;
-                    justify-content: space-evenly;
-                    padding: 2rem;
-                    height: auto;
-                    text-align: center;
-                    background-color: #07353d;
-                    opacity: 80%;
-                        li{
-                            font-size: 1.7rem;
-                                a{
-                                    display: inline-block;
-                                    color: #7fffd4;
-                                    font-family: Cambria, Cochin, Georgia, Times, 'Times New        Roman', serif;
-                                    font-style: bold;
-                                    margin-top: 3vh;
-                                    &:hover{
-                                        color: rgb(224, 144, 239);
-                        }  
-                    }
-                }
-            }  
-        }      
+    .navbar-expand-lg{
+        width: $ancho;
+        margin: 20px auto;
+        opacity: 85%;           
+            .nav-item{
+                padding: 1rem;
+            }
+        }
+    }
