--- a/css/estilo.css
+++ b/css/estilo.css
@@ -62,9 +62,6 @@ body .mainInicio .packs .packs__1 {
 
 body .mainInicio .videoIntro {
   margin: 2rem auto;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
 }
 
 body .mainInicio .videoIntro .videonos {
@@ -75,8 +72,8 @@ body .mainInicio .videoIntro .videonos {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 30rem;
-  width: 80rem;
+  height: 25rem;
+  width: 70rem;
 }
 
 body .footerInicio {
@@ -93,12 +90,9 @@ body .footerInicio .sucursal .sucursal__ubi {
   margin: 6rem auto;
 }
 
-body .footerInicio .sucursal .sucursal__ubi .sucursal__ubi:hover {
-  -webkit-transform: scale(1.2, 1.2);
-          transform: scale(1.2, 1.2);
-}
-
-body .footerInicio .menu2 {
+body .footerInicio .p-1 .menu2 {
+  width: 90%;
+  margin: 1rem auto;
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -114,13 +108,13 @@ body .footerInicio .menu2 {
   opacity: 80%;
 }
 
-body .footerInicio .menu2 li a {
+body .footerInicio .p-1 .menu2 li a {
   color: #7fffd4;
   font-weight: bold;
   font-size: larger;
 }
 
-body .footerInicio .menu2 li a:hover {
+body .footerInicio .p-1 .menu2 li a:hover {
   color: #e090ef;
 }
 
@@ -154,6 +148,8 @@ body .footerInicio .menu2 li a:hover {
 }
 
 .ContenedorAbout .Fabout .p-1 .menu2 {
+  width: 90%;
+  margin: 1rem auto;
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -219,6 +215,8 @@ body .footerInicio .menu2 li a:hover {
 }
 
 .prodContainer .footerProd .p-1 .menu2 {
+  width: 90%;
+  margin: 1rem auto;
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -241,68 +239,6 @@ body .footerInicio .menu2 li a:hover {
 }
 
 .prodContainer .footerProd .p-1 .menu2 li a:hover {
-  color: #e090ef;
-}
-
-.shopsContainer {
-  width: 100%;
-  margin: 20px auto;
-}
-
-.shopsContainer .headerShop .navbar-expand-lg {
-  width: 90%;
-  margin: 20px auto;
-  opacity: 85%;
-}
-
-.shopsContainer .headerShop .navbar-expand-lg .nav-item {
-  padding: 1rem;
-}
-
-.shopsContainer .sucursales {
-  width: 80%;
-  padding: 3rem;
-  margin: 10px auto;
-}
-
-.shopsContainer .sucursales .sucursales__ubi__maps {
-  margin-left: 12rem;
-  padding: 1rem;
-}
-
-.shopsContainer .sucursales .sucursales__ubi__maps:hover {
-  -webkit-transform: scale(1.1, 1.1);
-          transform: scale(1.1, 1.1);
-}
-
-.shopsContainer .footerShop {
-  width: 90%;
-  margin: 20px auto;
-}
-
-.shopsContainer .footerShop .p-1 .menu2 {
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  background-color: #07353d;
-  opacity: 80%;
-}
-
-.shopsContainer .footerShop .p-1 .menu2 li a {
-  color: #7fffd4;
-  font-weight: bold;
-  font-size: larger;
-}
-
-.shopsContainer .footerShop .p-1 .menu2 li a:hover {
   color: #e090ef;
 }
 
@@ -345,6 +281,8 @@ body .footerInicio .menu2 li a:hover {
 }
 
 .contenedorcontacto .footcontact .p-1 .menu2 {
+  width: 90%;
+  margin: 1rem auto;
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
